tests/baselines/reference/arraySpreadDownlevelIteratorUndefined.errors.txt
tests/cases/compiler/arraySpreadDownlevelIteratorUndefined.ts(2,5): error TS2548: Type 'number[] | undefined' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/arraySpreadDownlevelIteratorUndefined.ts (1 errors) ====
    declare const arr: number[] | undefined;
    [...arr];
        ~~~
!!! error TS2548: Type 'number[] | undefined' is not an array type or does not have a '[Symbol.iterator]()' method that returns an iterator.
    